<resources>
    <string name="intro_app_description">Active 10 is designed to help get you walking briskly for at
        least 10 minutes each day to improve your health and your mood
    </string>
    <string name="splash_active">Active</string>
    <string name="splash_10">10</string>
    <string name="app_one">ONE</string>
    <string name="app_you">YOU</string>
    <string name="bh_logo_description">Better Health Let\'s do this</string>
    <string name="nhs_logo_description">NHS</string>
    <string name="ac10_logo_description">Active 10</string>
    <string name="empty_toolbar_title">" "</string>
    <string name="back">Back</string>
    <string name="button_continue">Continue</string>
    <string name="button_close">Close</string>
    <string name="button_go_to_go_jauntly">Continue to Go Jauntly</string>
    <string name="button_no_thanks">No thanks</string>
    <string name="button_allow_motion_fitness">Activate Google Fit</string>
    <string name="button_allow_location">Allow location</string>
    <string name="button_allow_notifications">Allow Notifications</string>
    <string name="button_set_goals">Set goals</string>
    <string name="button_save_and_continue">Save and continue</string>
    <string name="save_and_continue">Save and continue</string>
    <string name="button_decline">Decline</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_accept">Accept</string>
    <string name="button_ok">Ok</string>
    <string name="button_join_one_you">Join One You</string>
    <string name="button_delete_goal">Delete goal</string>
    <string name="button_done">Done</string>
    <string name="button_save">Save</string>
    <string name="button_skip">Skip</string>
    <string name="button_add_my_details">Continue</string>
    <string name="goal_getter">Goal getter</string>
    <string name="high_achiever">High achiever</string>
    <string name="target_chaser">Target chaser</string>
    <string name="brisk_minutes">Brisk minutes</string>
    <string name="stepping_up">Stepping up</string>
    <string name="plans_and_routes">Plans and Routes</string>
    <string name="button_lets_get_walking">Let\'s get walking</string>
    <string name="intro_what_is_brisk">What is brisk?</string>
    <string name="intro_every_minute_counts">Every minute counts</string>
    <string name="intro_aim">Aim for 10 or more</string>
    <string name="intro_aim_description">Aim for at least 10 minutes of brisk walking each day and we will support you every step of the way.</string>
    <string name="intro_minute_description">Every minute of walking you do counts, but brisk is better. We\'ll record them all, even if
        they\'re spread out across the day.
    </string>
    <string name="brisk_highlight">Brisk</string>
    <string name="minute_highlight">minute</string>
    <string name="aim_highlight">10</string>
    <string name="intro_brisk_description">Brisk walking is simply walking quicker than usual at a pace that gets your
        heart pumping.
    </string>
    <string name="intro_terms_title">Ready to get started?</string>
    <string name="intro_terms_subtitle">In a moment you\'ll be asked to let the app turn on a few features on your
        phone.</string>
    <string name="migrating_intro_terms_subtitle">We need you to turn on these features on your phone to get the app working.
        Even if you\'ve turned on before, we need your permission to keep using them.</string>
    <string name="intro_fitness_terms">Fitness data: so that we can accurately record your walking</string>
    <string name="intro_fitness_terms_highlight">Fitness data:</string>
    <string name="intro_terms_location">Location: to help us understand how we can improve your experience</string>
    <string name="intro_terms_location_highlight">Location:</string>
    <string name="intro_terms_notification">Notifications: these are optional but will let us send you handy
        reminders to keep you on track
    </string>
    <string name="intro_terms_notification_highlight">Notifications:</string>
    <string name="intro_terms_and_conditions">I agree to your \nterms and conditions</string>
    <string name="intro_terms_and_conditions_large">I agree to the terms and conditions</string>
    <string name="intro_terms_and_conditions_highlight">Terms and conditions</string>
    <string name="view_terms_and_conditions_intro">View terms and conditions</string>
    <string name="view_privacy_and_policy">View privacy policy</string>
    <string name="intro_terms_and_conditions_inline">I agree to terms and conditions</string>
    <string name="intro_terms_and_conditions_error">We need you to accept our terms and conditions to use this app</string>
    <string name="permission_fitness_data">Activate Google Fit</string>
    <string name="motion_fitness">Activate Google Fit</string>
    <string name="permission_fitness_data_description_today_walk">By connecting Active 10 and Google Fit, you can easily integrate your fitness activity from various sources to help you better understand your progress. We\’ll need this for the app to work.</string>
    <string name="permission_fitness_data_description">By connecting Active 10 and Google Fit, you can easily integrate your fitness activity from various sources to help you better understand your progress.\n\nGoogle Fit is an open platform that lets you control your fitness data from multiple apps and devices.\n\nYou can disconnect from Google Fit at any time by going to Settings</string>
    <string name="permission_location">Location</string>
    <string name="permission_location_description">This will help us understand how the app is being used and improve
        your experience in the future. It\'s optional and the app will still work without this permission.
    </string>
    <string name="permission_notifications">Stay on track</string>
    <string name="permission_notifications_description">We\'ll only send notifications to keep you on-track.
        Go to settings to turn them off.
    </string>
    <string name="permission_goals">Goals</string>
    <string name="permission_goals_description">What is your goal? Thinking about your motivations can help you be more
        successful. Add your goals
    </string>
    <string name="about_you_title">About you</string>
    <string name="activity_level_title">Current activity level</string>
    <string name="gender_subtitle">Sex (optional)</string>
    <string name="name">Name</string>
    <string name="age_title">Age</string>
    <string name="age_subtitle">Age (optional)</string>
    <string name="activity_optional">Current activity level (optional)</string>
    <string name="gender_other">I\'d rather not say</string>
    <string name="save_amp_continue">Save &amp; Continue</string>
    <string name="migrating_active10_title">Active 10 has changed</string>
    <string name="migrating_active10_highlight">Changed</string>
    <string name="migrating_active10_description">We\'ve made improvements to how the app looks and works so that you
        can get the most out of using it and maximise your health benefits.
    </string>
    <string name="migrating_intro_every_minute_counts">Now, every minute of brisk walking counts towards your Active 10
        goals… even if they\'re spread across the day.
    </string>
    <string name="migrating_intro_aim_description">Your target is still to clock up 10 minutes of brisk walking each
        day. Want to aim higher? Work up to three Active 10s a day.
    </string>
    <string name="permission_goal_list_title">I\'m doing Active 10 because…</string>
    <string name="goal_subtitle">Please select one or more goals to continue</string>
    <string name="goal_item_1">I want to feel fitter and healthier</string>
    <string name="goal_item_2">I want to make regular walks a part of my lifestyle</string>
    <string name="goal_item_3">I want to improve my mood</string>
    <string name="goal_item_4">I\'ve been diagnosed with a health condition</string>
    <string name="goal_item_5">I\'ve been advised to get more active</string>
    <string name="goal_item_6">Add my own reason</string>
    <string name="another_reason_subtitle">Another reason</string>
    <string name="add_your_reason_hint">Add your reason...</string>
    <string name="goal_swear_word">Woah, you can\'t use that word!</string>
    <string name="permission_more_about_goals_title">Tell us more about your goal…</string>
    <string name="goal_character_count">Characters left: %d</string>
    <string name="dialog_motion_fitness_permission_title">Allow "Active 10" to access motion and fitness activity?
    </string>
    <string name="dialog_motion_fitness_permission_subtitle">For the app to track your walking, you\'ll need to allow
        this
        access.
    </string>
    <string name="dialog_terms_and_conditions_title">You\'ll need to accept our terms and conditions to use Active 10 app</string>
    <string name="dialog_location_permission_title">Allow "Active 10" to access your location</string>
    <string name="dialog_location_permission_subtitle">Allow "Active 10" to access your location while you are using the app?
    </string>
    <string name="dialog_sign_in_web_view_title">"Active 10" Wants to Use “login.nhs.uk” to Sign In
    </string>
    <string name="dialog_sign_in_web_view_subtitle">This allows the app and website to share information about you.
    </string>
    <string name="intro_terms_text">If you have any concerns about exercising or pre-existing conditions, consult your local GP or health professional before starting this programme.
    </string>
    <string name="bottom_nav_menu_today_walk">Today\'s walks</string>
    <string name="bottom_nav_menu_my_walks">My walks</string>
    <string name="bottom_nav_menu_discover">Discover</string>
    <string name="bottom_nav_menu_settings">Settings</string>
    <string name="missing_data">Missing some data?</string>
    <string name="missing_data_subtitle">It looks like you haven\'t opened Active 10 for a while.</string>
    <string name="missing_data_description">After 5 days, your phone stops sharing your motion and fitness data with the app. To ensure we can continue to track your walking, please open the app at least once every 5 days.</string>
    <string name="update">Update</string>
    <string name="not_now">Not now</string>
    <string name="update_available">New update available</string>
    <string name="update_subtitle">It looks like you are not using the latest version of the app that may contain important bug fixes or new functionality.</string>
    <string name="date_restore_error">Oops! Looks like we were unable to check for lost data at this time. We will try again tomorrow.</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_internet_connection">Oops! Looks like you are offline!</string>
    <string name="your_safety_is_important_to_us">Your safety is important to us</string>
    <string name="under_the_age">If you are under the age of 16 please get parental permission before attempting this programme.</string>
    <string name="introducing_widget_label">Introducing</string>
    <string name="introducing_widget_title">The new Active10\nhome screen widget</string>
    <string name="introducing_widget_message">Now you can keep track of\nyour progress straight from\nyour homescreen</string>
    <string name="continue_with_nhs_login">Continue to NHS login</string>
    <string name="continue_without_nhs_login">Continue without login</string>
    <string name="nhs_log_back_in_popup_title">Welcome back to NHS Active 10!</string>
    <string name="nhs_log_back_in_popup_subtitle">We’ve logged you out so that we can keep your data secure.\n\nLog back in via NHS login to continue using personalised features to support your brisk walking.</string>
</resources>