<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:paddingBottom="26dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/dialog_introducing_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/introducing_widget_label"
        android:textColor="@color/light_grey_two"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/dialog_introducing_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/introducing_widget_title"
        android:textColor="@color/black_33"
        android:textSize="32sp" />


    <ImageView
        android:id="@+id/dialog_introducing_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        android:elevation="4dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_widget" />

    <TextView
        android:id="@+id/dialog_introducing_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:paddingStart="64dp"
        android:paddingEnd="64dp"
        android:text="@string/introducing_widget_message"
        android:textColor="@color/black_33"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_introducing_continue_button"
        style="@style/TealButtonLarge"
        android:layout_marginTop="40dp"
        android:enabled="true"
        android:text="@string/button_continue" />

</LinearLayout>