<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:labelFor="@id/dismissBtn"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20"
        tools:contentDescription="@string/no_internet_connection"
        tools:text="@string/date_restore_error" />

    <Button
        android:id="@+id/dismissBtn"
        style="@style/SecondaryButtonLarge"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/BU_20"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/BU_20"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/dismiss"
        android:text="@string/dismiss" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:alpha="0.2"
        android:background="@color/greyish_brown_two" />
</LinearLayout>