<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/nhs_log_back_in_popup_title"
            android:textColor="@color/black_33"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/dialog_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/nhs_log_back_in_popup_subtitle"
            android:textColor="@color/black_33"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_submit_button"
            style="@style/NhsLoginButton"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="16dp"
            android:letterSpacing="0"
            android:paddingTop="6dp"
            android:text="@string/continue_with_nhs_login" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_cancel_button"
            style="@style/SecondaryButtonLarge"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="34dp"
            android:enabled="true"
            android:text="@string/continue_without_nhs_login" />

    </LinearLayout>
</ScrollView>