<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="24dp">

    <ImageView
        android:id="@+id/dialog_common_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        android:importantForAccessibility="no"
        tools:src="@drawable/ic_brisk"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/dialog_common_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingStart="@dimen/margin_size_32"
        android:paddingEnd="@dimen/margin_size_32"
        android:fontFamily="@font/roboto_condensed_bold"
        android:textColor="@color/black_33"
        android:textSize="32sp"
        android:visibility="gone"
        android:gravity="center"
        tools:text="@string/missing_data"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/dialog_common_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:paddingStart="@dimen/margin_size_32"
        android:paddingEnd="@dimen/margin_size_32"
        android:textColor="@color/black_33"
        android:textSize="18sp"
        android:visibility="gone"
        tools:text="@string/missing_data_subtitle"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_common_primary_button"
        style="@style/PrimaryButtonLarge"
        android:layout_marginTop="60dp"
        android:enabled="true"
        android:visibility="gone"
        tools:text="@string/button_ok"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_common_secondary_button"
        style="@style/SecondaryButtonLarge"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/BU_20"
        android:layout_marginTop="@dimen/BU_12"
        android:layout_marginEnd="@dimen/BU_20"
        android:visibility="gone"
        tools:text="@string/not_now"
        tools:visibility="visible" />

</LinearLayout>