<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="26dp">


        <TextView
            android:id="@+id/dialog_hero_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:textColor="@color/light_grey_two"
            android:textSize="24sp"
            tools:text="@string/introducing_widget_label" />


        <TextView
            android:id="@+id/dialog_hero_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:gravity="center"
            android:textColor="@color/black_33"
            android:textSize="32sp"
            tools:text="@string/introducing_widget_title" />


        <ImageView
            android:id="@+id/dialog_hero_image"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="12dp"
            android:elevation="4dp"
            android:importantForAccessibility="no"
            android:scaleType="centerInside"
            android:src="@drawable/ic_widget" />

        <TextView
            android:id="@+id/dialog_hero_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:paddingStart="64dp"
            android:paddingEnd="64dp"
            android:textColor="@color/black_33"
            android:textSize="18sp"
            tools:text="@string/introducing_widget_message" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_hero_continue_button"
            style="@style/TealButtonLarge"
            android:layout_marginTop="40dp"
            android:enabled="true"
            tools:text="@string/button_continue" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_hero_later_button"
            style="@style/SecondaryButtonLarge"
            android:layout_marginTop="10dp"
            android:enabled="true"
            tools:text="Maybe later" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>