<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="24dp">

        <ImageView
            android:id="@+id/dialog_login_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:visibility="gone"
            tools:src="@drawable/ic_brisk"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/dialog_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:gravity="center"
            android:paddingStart="@dimen/margin_size_32"
            android:paddingEnd="@dimen/margin_size_32"
            android:textColor="@color/black_33"
            android:textSize="32sp"
            android:visibility="gone"
            tools:text="@string/missing_data"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/dialog_login_subtitle"
            style="@style/Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingStart="@dimen/margin_size_32"
            android:paddingEnd="@dimen/margin_size_32"
            android:visibility="gone"
            tools:text="@string/missing_data_subtitle"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/dialog_bullet_list_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/BU_12"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_login_primary_button"
            style="@style/PrimaryButtonLarge"
            android:layout_marginTop="32dp"
            android:enabled="true"
            android:visibility="gone"
            tools:text="@string/button_ok"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_login_secondary_button"
            style="@style/SecondaryButtonLarge"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/BU_12"
            android:visibility="gone"
            tools:text="@string/not_now"
            tools:visibility="visible" />

    </LinearLayout>
</ScrollView>